Fix map image sources and remove Deer Park map
Updated image source paths for Beaver Park and Crows Park maps, and removed Deer Park map.

--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@ footer {
 
 <section id="maps">
 <h2>Campground Maps</h2>
-<p>Images are loaded from the main branch root.</p>
+<p>Click any map to view full size.</p>
 
 <div class="map-grid">
 
@@ -144,12 +144,12 @@ footer {
 </div>
 
 <div class="map-card">
-<img src="Beaver-Park-Plat-1.png" alt="Beaver Park Plat 1">
+<img src="Beaver-Park---Plat-1.png" alt="Beaver Park Plat 1">
 <h3>Beaver Park – Plat 1</h3>
 </div>
 
 <div class="map-card">
-<img src="Beaver-Park-Plat-2.png" alt="Beaver Park Plat 2">
+<img src="Beaver-Park---Plat-2.png" alt="Beaver Park Plat 2">
 <h3>Beaver Park – Plat 2</h3>
 </div>
 
@@ -164,13 +164,8 @@ footer {
 </div>
 
 <div class="map-card">
-<img src="Crows-Park-Plat-2.png" alt="Crows Park Plat 2">
+<img src="Crows-Park---Plat-2.png" alt="Crows Park Plat 2">
 <h3>Crows Park – Plat 2</h3>
-</div>
-
-<div class="map-card">
-<img src="Deer-Park.png" alt="Deer Park">
-<h3>Deer Park</h3>
 </div>
 
 <div class="map-card">
