--- a/index.html
+++ b/index.html
@@ -46,7 +46,6 @@ h2 {
 }
 
 /* MAP GRID */
-
 .map-grid {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
@@ -76,7 +75,6 @@ h2 {
 }
 
 /* LIGHTBOX */
-
 .lightbox {
     display: none;
     position: fixed;
@@ -119,6 +117,7 @@ footer {
     <a href="#rules">Rules</a>
     <a href="#maps">Maps</a>
     <a href="#location">Location</a>
+    <a href="#info">Info</a>
 </nav>
 
 <section id="amenities">
@@ -214,6 +213,41 @@ footer {
 7233 Wildwood Estates Dr.<br>
 Steedman, MO 65077
 </p>
+</section>
+
+<section id="info">
+<h2>Useful Info for Visitors</h2>
+
+<h3>Website Hours</h3>
+<p>Our online website will be actively updated Monday–Friday, 8:00 AM – 6:00 PM. Any offline updates will appear automatically on reload.</p>
+
+<h3>Available TV Broadcasts Nearby</h3>
+<ul>
+<li>Local channels: ABC, NBC, CBS, FOX</li>
+<li>Public access: Channel 15</li>
+<li>Local weather & news: Channel 10 & 11</li>
+</ul>
+
+<h3>Wi-Fi Availability</h3>
+<ul>
+<li>Main clubhouse: Free Wi-Fi, password posted at reception</li>
+<li>Pool area: Free Wi-Fi hotspot</li>
+<li>Clubhouse parking lot: Signal available</li>
+</ul>
+
+<h3>Other Useful Info</h3>
+<ul>
+<li>Nearest grocery store: Steedman Market (5 min drive)</li>
+<li>Gas stations: Hwy 54 exit 160</li>
+<li>Nearby hiking: Wildwood Trails</li>
+<li>Emergency contacts: Camp office 573-XXX-XXXX</li>
+</ul>
+
+<!-- PLACEHOLDER: Add more info here -->
+<div id="additional-info">
+<!-- Add more <h3> or <ul> blocks here as needed -->
+</div>
+
 </section>
 
 <footer>
