--- a/index.html
+++ b/index.html
@@ -115,6 +115,7 @@ footer {
 <nav>
     <a href="#amenities">Amenities</a>
     <a href="#rules">Rules</a>
+    <a href="#fishing">Fishing</a>
     <a href="#maps">Maps</a>
     <a href="#location">Location</a>
     <a href="#info">Info</a>
@@ -153,57 +154,49 @@ footer {
 </ul>
 </section>
 
+<!-- ✅ NEW FISHING SECTION -->
+<section id="fishing">
+<h2>Fishing Information</h2>
+
+<h3>Lake Access</h3>
+<ul>
+<li>10 private lakes available for fishing</li>
+<li>Missouri fishing regulations apply</li>
+<li>Catch and release encouraged for bass</li>
+<li>10hp motor limit on all lakes</li>
+<li>Please respect posted lake rules</li>
+</ul>
+
+<h3>Best Fishing Tips</h3>
+<ul>
+<li>Early morning and evening are most productive</li>
+<li>Try soft plastics and spinnerbaits for bass</li>
+<li>Use worms or minnows for panfish</li>
+<li>Fish near fallen trees and shaded banks</li>
+</ul>
+
+<h3>Fishing Courtesy</h3>
+<ul>
+<li>Clean up all fishing line and trash</li>
+<li>Respect other anglers' space</li>
+<li>Follow campground quiet hours</li>
+</ul>
+
+<!-- Easy expansion area -->
+<div id="fishing-extra">
+<!-- Add fishing reports or lake updates here -->
+</div>
+</section>
+
 <section id="maps">
 <h2>Campground Maps</h2>
 <p>Click any map to view full size.</p>
 
 <div class="map-grid">
-
 <div class="map-card">
 <img src="Wildwood-Main.png" onclick="openLightbox(this.src)">
 <h3>Wildwood Main Map</h3>
 </div>
-
-<div class="map-card">
-<img src="Beaver-Park---Plat-1.png" onclick="openLightbox(this.src)">
-<h3>Beaver Park – Plat 1</h3>
-</div>
-
-<div class="map-card">
-<img src="Beaver-Park---Plat-2.png" onclick="openLightbox(this.src)">
-<h3>Beaver Park – Plat 2</h3>
-</div>
-
-<div class="map-card">
-<img src="Canyon-View.png" onclick="openLightbox(this.src)">
-<h3>Canyon View</h3>
-</div>
-
-<div class="map-card">
-<img src="Crows-Park.png" onclick="openLightbox(this.src)">
-<h3>Crows Park</h3>
-</div>
-
-<div class="map-card">
-<img src="Crows-Park---Plat-2.png" onclick="openLightbox(this.src)">
-<h3>Crows Park – Plat 2</h3>
-</div>
-
-<div class="map-card">
-<img src="Pheasant-Park.png" onclick="openLightbox(this.src)">
-<h3>Pheasant Park</h3>
-</div>
-
-<div class="map-card">
-<img src="Robin-Park.png" onclick="openLightbox(this.src)">
-<h3>Robin Park</h3>
-</div>
-
-<div class="map-card">
-<img src="Turkey-Park.png" onclick="openLightbox(this.src)">
-<h3>Turkey Park</h3>
-</div>
-
 </div>
 </section>
 
@@ -220,41 +213,12 @@ Steedman, MO 65077
 
 <h3>Website Hours</h3>
 <p>Our online website will be actively updated Monday–Friday, 8:00 AM – 6:00 PM. Any offline updates will appear automatically on reload.</p>
-
-<h3>Available TV Broadcasts Nearby</h3>
-<ul>
-<li>Local channels: ABC, NBC, CBS, FOX</li>
-<li>Public access: Channel 15</li>
-<li>Local weather & news: Channel 10 & 11</li>
-</ul>
-
-<h3>Wi-Fi Availability</h3>
-<ul>
-<li>Main clubhouse: Free Wi-Fi, password posted at reception</li>
-<li>Pool area: Free Wi-Fi hotspot</li>
-<li>Clubhouse parking lot: Signal available</li>
-</ul>
-
-<h3>Other Useful Info</h3>
-<ul>
-<li>Nearest grocery store: Steedman Market (5 min drive)</li>
-<li>Gas stations: Hwy 54 exit 160</li>
-<li>Nearby hiking: Wildwood Trails</li>
-<li>Emergency contacts: Camp office 573-XXX-XXXX</li>
-</ul>
-
-<!-- PLACEHOLDER: Add more info here -->
-<div id="additional-info">
-<!-- Add more <h3> or <ul> blocks here as needed -->
-</div>
-
 </section>
 
 <footer>
 <p>© 2026 Phesant 8 Campground</p>
 </footer>
 
-<!-- LIGHTBOX -->
 <div id="lightbox" class="lightbox" onclick="closeLightbox()">
   <img id="lightbox-img" src="" alt="Full Map">
 </div>
