--- a/index.html
+++ b/index.html
@@ -102,27 +102,6 @@ footer {
     padding: 15px;
     margin-top: 30px;
 }
-
-/* ✅ FISHING DROPDOWNS */
-.lake-dropdown {
-    margin: 10px 0;
-    border-radius: 10px;
-    overflow: hidden;
-    border: 1px solid #ddd;
-}
-
-.lake-dropdown summary {
-    background: #2e6b3f;
-    color: white;
-    padding: 12px;
-    cursor: pointer;
-    font-weight: bold;
-}
-
-.lake-dropdown div {
-    padding: 15px;
-    background: #fafafa;
-}
 </style>
 </head>
 
@@ -136,7 +115,6 @@ footer {
 <nav>
     <a href="#amenities">Amenities</a>
     <a href="#rules">Rules</a>
-    <a href="#fishing">Fishing</a>
     <a href="#maps">Maps</a>
     <a href="#location">Location</a>
     <a href="#info">Info</a>
@@ -175,39 +153,6 @@ footer {
 </ul>
 </section>
 
-<!-- ✅ FISHING SECTION -->
-<section id="fishing">
-<h2>Fishing Information</h2>
-
-<h3>Lake Information</h3>
-
-<details class="lake-dropdown"><summary>1. Beaver Lake (Beaver Park)</summary><div>ADD LAKE DETAILS HERE</div></details>
-<details class="lake-dropdown"><summary>2. Canyon View Lake (Canyon View Park)</summary><div>ADD LAKE DETAILS HERE</div></details>
-<details class="lake-dropdown"><summary>3. Crow Lake (Crows Park)</summary><div>ADD LAKE DETAILS HERE</div></details>
-<details class="lake-dropdown"><summary>4. Deer Lake (Deer Park)</summary><div>ADD LAKE DETAILS HERE</div></details>
-<details class="lake-dropdown"><summary>5. Pheasant Lake (Pheasant Park)</summary><div>ADD LAKE DETAILS HERE</div></details>
-<details class="lake-dropdown"><summary>6. Robin Lake (Robin Park)</summary><div>ADD LAKE DETAILS HERE</div></details>
-<details class="lake-dropdown"><summary>7. Turkey Lake (Turkey Park)</summary><div>ADD LAKE DETAILS HERE</div></details>
-<details class="lake-dropdown"><summary>8. Mallard Lake (Mallard Park)</summary><div>ADD LAKE DETAILS HERE</div></details>
-<details class="lake-dropdown"><summary>9. Woodland Lake (Woodland Park)</summary><div>ADD LAKE DETAILS HERE</div></details>
-<details class="lake-dropdown"><summary>10. Lost Canyon Lake (Lost Canyon Park)</summary><div>ADD LAKE DETAILS HERE</div></details>
-
-<h3>General Fish & Wildlife</h3>
-<ul>
-<li>Bass</li>
-<li>Bluegill</li>
-<li>Catfish</li>
-<li>Crappie</li>
-<li>Various native wildlife around lakes</li>
-</ul>
-
-<!-- EASY EXPANSION -->
-<div id="fishing-extra">
-<!-- Add seasonal fishing reports here -->
-</div>
-
-</section>
-
 <section id="maps">
 <h2>Campground Maps</h2>
 <p>Click any map to view full size.</p>
@@ -215,13 +160,48 @@ footer {
 <div class="map-grid">
 
 <div class="map-card">
-<img src="Wildwood-Main.png" alt="Wildwood Main Map" onclick="openLightbox(this.src)">
+<img src="Wildwood-Main.png" alt="Wildwood Main Map" loading="lazy" onclick="openLightbox(this.src)">
 <h3>Wildwood Main Map</h3>
 </div>
 
 <div class="map-card">
-<img src="Wildwood-Secondary.png" alt="Wildwood Secondary Map" onclick="openLightbox(this.src)">
-<h3>Wildwood Secondary Map</h3>
+<img src="Beaver-Park---Plat-1.png" alt="Beaver Park Plat 1" loading="lazy" onclick="openLightbox(this.src)">
+<h3>Beaver Park – Plat 1</h3>
+</div>
+
+<div class="map-card">
+<img src="Beaver-Park---Plat-2.png" alt="Beaver Park Plat 2" loading="lazy" onclick="openLightbox(this.src)">
+<h3>Beaver Park – Plat 2</h3>
+</div>
+
+<div class="map-card">
+<img src="Canyon-View.png" alt="Canyon View" loading="lazy" onclick="openLightbox(this.src)">
+<h3>Canyon View</h3>
+</div>
+
+<div class="map-card">
+<img src="Crows-Park.png" alt="Crows Park" loading="lazy" onclick="openLightbox(this.src)">
+<h3>Crows Park</h3>
+</div>
+
+<div class="map-card">
+<img src="Crows-Park---Plat-2.png" alt="Crows Park Plat 2" loading="lazy" onclick="openLightbox(this.src)">
+<h3>Crows Park – Plat 2</h3>
+</div>
+
+<div class="map-card">
+<img src="Pheasant-Park.png" alt="Pheasant Park" loading="lazy" onclick="openLightbox(this.src)">
+<h3>Pheasant Park</h3>
+</div>
+
+<div class="map-card">
+<img src="Robin-Park.png" alt="Robin Park" loading="lazy" onclick="openLightbox(this.src)">
+<h3>Robin Park</h3>
+</div>
+
+<div class="map-card">
+<img src="Turkey-Park.png" alt="Turkey Park" loading="lazy" onclick="openLightbox(this.src)">
+<h3>Turkey Park</h3>
 </div>
 
 </div>
@@ -239,7 +219,31 @@ Steedman, MO 65077
 <h2>Useful Info for Visitors</h2>
 
 <h3>Website Hours</h3>
-<p>Our online website will be actively updated Monday–Friday, 8:00 AM – 6:00 PM.</p>
+<p>Our online website will be actively updated Monday–Friday, 8:00 AM – 6:00 PM. Any offline updates will appear automatically on reload.</p>
+
+<h3>Available TV Broadcasts Nearby</h3>
+<ul>
+<li>Local channels: ABC, NBC, CBS, FOX</li>
+<li>Public access: Channel 15</li>
+<li>Local weather & news: Channel 10 & 11</li>
+</ul>
+
+<h3>Wi-Fi Availability</h3>
+<ul>
+<li>Main clubhouse: Free Wi-Fi, password posted at reception</li>
+<li>Pool area: Free Wi-Fi hotspot</li>
+<li>Clubhouse parking lot: Signal available</li>
+</ul>
+
+<h3>Other Useful Info</h3>
+<ul>
+<li>Nearest grocery store: Steedman Market (5 min drive)</li>
+<li>Gas stations: Hwy 54 exit 160</li>
+<li>Nearby hiking: Wildwood Trails</li>
+<li>Emergency contacts: Camp office 573-XXX-XXXX</li>
+</ul>
+
+<div id="additional-info"></div>
 </section>
 
 <footer>
